TMI2-512: Remove warnings and improve code quality (#139)
TMI2-512: Remove warnings and improve code quality #139

---------

Co-authored-by: Jim Purvis <james.purvis@and.digital>